--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>ros_numpy</build_depend>
-  <build_depend>python-catkin-pkg</build_depend>
+  <build_depend>python3-catkin-pkg</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
@@ -40,13 +40,12 @@
   <exec_depend>actionlib_msgs</exec_depend>
 
   <!-- Python dependencies  -->
-  <exec_depend version_gte="1.0.1">python-pathlib</exec_depend>
-  <exec_depend version_gte="3.10.1">python-pymongo</exec_depend>
-  <exec_depend version_gte="1.2.6">python-rospkg</exec_depend>
-  <exec_depend version_gte="4.19.0">python-tqdm</exec_depend>
-  <exec_depend version_gte="3.12">python-yaml</exec_depend>
-  <exec_depend version_gte="1.13.3">python-numpy</exec_depend>
+  <exec_depend version_gte="3.10.1">python3-pymongo</exec_depend>
+  <exec_depend version_gte="1.2.6">python3-rospkg</exec_depend>
+  <exec_depend version_gte="4.19.0">python3-tqdm</exec_depend>
+  <exec_depend version_gte="3.12">python3-yaml</exec_depend>
+  <exec_depend version_gte="1.13.3">python3-numpy</exec_depend>
 
   <test_depend>mongodb</test_depend> <!-- Test uses system docker so CI works -->
-  <test_depend version_gte="3.3.2">python-pytest</test_depend>
+  <test_depend version_gte="3.3.2">python3-pytest</test_depend>
 </package>
